# link-redirector

./: Cargo.toml  Dockerfile
.github/workflows/: build.yaml
sql/: add_link.sql  find_link_by_slug.sql
src/: main.rs  schema.rs
src/config/: mod.rs
src/db/: mod.rs
src/handlers/: mod.rs
src/models/: mod.rs
